[gd_scene load_steps=2 format=3 uid="uid://bhecy4hmqn1b"]

[ext_resource type="Script" path="res://autoload/WarningScreen.gd" id="1_sd678"]

[node name="WarningScreen" type="CanvasLayer"]
process_mode = 3
layer = 127
visible = false
script = ExtResource("1_sd678")

[node name="BG" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="BG"]
offset_left = -162.0
offset_top = -82.0
offset_right = 1333.0
offset_bottom = 726.0
color = Color(0, 0, 0, 0.392157)

[node name="Panel" type="Panel" parent="BG"]
offset_left = 170.0
offset_top = 127.0
offset_right = 961.0
offset_bottom = 499.0

[node name="Text" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1153.0
offset_bottom = 657.0

[node name="AlertTitle" type="Label" parent="Text"]
offset_left = 178.0
offset_top = 131.0
offset_right = 954.0
offset_bottom = 183.0
theme_override_font_sizes/font_size = 49
text = "Warning!"
horizontal_alignment = 1

[node name="AlertMessage" type="Label" parent="Text"]
offset_left = 175.0
offset_top = 205.0
offset_right = 951.0
offset_bottom = 276.0
theme_override_font_sizes/font_size = 21
text = "This is a sample text"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Buttons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ok" type="Button" parent="Buttons"]
offset_left = 812.0
offset_top = 434.0
offset_right = 936.0
offset_bottom = 482.0
theme_override_font_sizes/font_size = 29
text = "Ok"

[node name="calcel" type="Button" parent="Buttons"]
offset_left = 669.0
offset_top = 437.0
offset_right = 793.0
offset_bottom = 485.0
theme_override_font_sizes/font_size = 29
text = "Cancel"

[node name="fuck no go back" type="Button" parent="Buttons"]
offset_left = 187.0
offset_top = 436.0
offset_right = 311.0
offset_bottom = 484.0
theme_override_font_sizes/font_size = 29
text = "Back to main menu"

[connection signal="pressed" from="Buttons/ok" to="." method="_on_ok_pressed"]
[connection signal="pressed" from="Buttons/calcel" to="." method="_on_calcel_pressed"]
[connection signal="pressed" from="Buttons/fuck no go back" to="." method="_on_fuck_no_go_back_pressed"]
